rename system to paru and format everything

--- a/configs/communication.toml
+++ b/configs/communication.toml
@@ -1,5 +1,1 @@
-system = [
-    "signal-desktop",
-    "teams",
-    "whatsapp-for-linux-bin",
-]
+paru = ["signal-desktop", "teams", "whatsapp-for-linux-bin"]
