--- a/configs/terminal.toml
+++ b/configs/terminal.toml
@@ -1,31 +1,31 @@
-system = [
-    "btop",
-    "fastfetch",
-    "fish",
-    "fisher",
-    "shlorem",
-    "starship",
-    "ttf-hack",
-    "ttf-hack-nerd",
-    "vim",
-    "wezterm",
+paru = [
+  "btop",
+  "fastfetch",
+  "fish",
+  "fisher",
+  "shlorem",
+  "starship",
+  "ttf-hack",
+  "ttf-hack-nerd",
+  "vim",
+  "wezterm",
 ]
 
 cargo = [
-    "bat",
-    "-F clipboard broot",
-    "eza",
-    "--git https://github.com/jullanggit/ferris_if_rust.git ferris_if_rust",
-    "rioterm",
-    "ripgrep",
-    "repgrep",
-    "uwuify",
-    "zoxide",
+  "bat",
+  "-F clipboard broot",
+  "eza",
+  "--git https://github.com/jullanggit/ferris_if_rust.git ferris_if_rust",
+  "rioterm",
+  "ripgrep",
+  "repgrep",
+  "uwuify",
+  "zoxide",
 ]
 
 files = [
-    "/home/julius/.wezterm.lua",
-    "/home/julius/.config/fastfetch/config.jsonc",
-    "/home/julius/.config/fish",
-    "/root/.config/fish",
+  "/home/julius/.wezterm.lua",
+  "/home/julius/.config/fastfetch/config.jsonc",
+  "/home/julius/.config/fish",
+  "/root/.config/fish",
 ]
