--- a/configs/custom_linux.toml
+++ b/configs/custom_linux.toml
@@ -1,14 +1,9 @@
-system = [
-   "devtools", 
-   "lld",
-   "llvm",
-   "rust-bindgen",
-]
+paru = ["devtools", "lld", "llvm", "rust-bindgen"]
 
 files = [
-    "/home/julius/linux/pc",
-    "/home/julius/linux/laptop",
-    "/home/julius/linux/PKGBUILD",
-    "/home/julius/linux/.config.minimal.pc",
-    "/home/julius/linux/.config.minimal.laptop",
+  "/home/julius/linux/pc",
+  "/home/julius/linux/laptop",
+  "/home/julius/linux/PKGBUILD",
+  "/home/julius/linux/.config.minimal.pc",
+  "/home/julius/linux/.config.minimal.laptop",
 ]
