--- a/configs/filesystems/bcachefs.toml
+++ b/configs/filesystems/bcachefs.toml
@@ -1,12 +1,7 @@
-[managers.system]
-items = [
-    "snapper_bcachefs",
-    "grub-git",
-]
+paru = ["snapper_bcachefs", "grub-git"]
 
-[managers.files]
-items = [
-    "bcachefs/etc/mkinitcpio.conf",
-    "bcachefs/etc/snapper/configs",
-    "bcachefs/home/julius/.cache/paru/diff/grub-git.diff.safe",
+files = [
+  "bcachefs/etc/mkinitcpio.conf",
+  "bcachefs/etc/snapper/configs",
+  "bcachefs/home/julius/.cache/paru/diff/grub-git.diff.safe",
 ]
