--- a/configs/hacking.toml
+++ b/configs/hacking.toml
@@ -1,8 +1,3 @@
-system = [
-    "nmap",
-    "vulscan",
-]
+paru = ["nmap", "vulscan"]
 
-files = [
-    "/home/julius/Hacking",
-]
+files = "/home/julius/Hacking"
