--- a/machines/laptop.toml
+++ b/machines/laptop.toml
@@ -1,28 +1,19 @@
-imports = [
-    "common",
-    "filesystems/btrfs",
+imports = ["common", "filesystems/btrfs"]
+
+paru = [
+  "amd-ucode",
+  "amdgpu_top-bin",
+  "amdvlk",
+  "bindfs",
+  "cups",
+  "foliate",
+  "losslesscut-git",
+  # "opencl-amd",
+  "sshfs",
+  "usbguard",
+  "wireless_tools",
+  "xf86-video-amdgpu",
+  "zed",
 ]
 
-system = [
-    "amd-ucode",
-    "amdgpu_top-bin",
-    "amdvlk",
-    "bindfs",
-    "cups",
-    "foliate",
-    "losslesscut-git",
-    # "opencl-amd",
-    "sshfs",
-    "usbguard",
-    "wireless_tools",
-    "xf86-video-amdgpu",
-    "zed",
-]
-
-service = [
-    "macchanger@wlp2s0",
-]
-
-service = [
-    "cups",
-]
+service = ["macchanger@wlp2s0", "cups"]
