change managers to use new syntax (<item> / <items>)

--- a/managers/files.toml
+++ b/managers/files.toml
@@ -1,5 +1,3 @@
-add = "dots add #:?"
-remove = "dots remove #:?"
+add = "dots add <item>"
+remove = "dots remove <item>"
 list = "dots list"
-
-single_arg = true
