--- a/managers/service.toml
+++ b/managers/service.toml
@@ -1,5 +1,3 @@
-add = "sudo systemctl enable #:? --now"
-remove = "sudo systemctl disable #:? --now"
+add = "sudo systemctl enable --now <items>"
+remove = "sudo systemctl disable --now <items>"
 list = '''systemctl list-unit-files --state=enabled --no-pager --no-legend | awk '$3 == "disabled" {gsub(/\.service$/, "", $1); print $1}' '''
-
-single_arg = false
