--- a/managers/cargo.toml
+++ b/managers/cargo.toml
@@ -1,6 +1,4 @@
-add = "cargo install --force --profile fast_run #:? && cargo install-update-config --install-prereleases $(echo #:? | rev | cut -d ' ' -f 1 | rev)"
-remove = "cargo uninstall #:? || true"
+add = "cargo install --force --profile fast_run <item> && cargo install-update-config --install-prereleases $(echo <item> | rev | cut -d ' ' -f 1 | rev)"
+remove = "cargo uninstall <items> || true"
 upgrade = "cargo install-update -ag -- --profile fast_run"
-list = "cargo install --list | rg '^\\S+' -o" # Double \ because of toml
-
-single_arg = false
+list = "cargo install --list | rg '^\\S+' -o"                                                                                                             # Double \ because of toml
