--- a/configs/system.toml
+++ b/configs/system.toml
@@ -21,9 +21,10 @@ paru = [
 ]
 
 cargo = [
+  "--git https://github.com/jullanggit/dots dots",
+  "--git https://github.com/jullanggit/meta meta",
   "--git https://gitlab.com/jullanggit/rebos.git rebos",
   "-F git --git https://github.com/Morganamilo/paru.git paru",
-  "--git https://github.com/jullanggit/dots dots",
 ]
 
 service = ["cronie", "sshd", "NetworkManager"]
