Add rate-mirrors, sshfs, helix & wl-clipboard

--- a/configs/system.toml
+++ b/configs/system.toml
@@ -15,7 +15,9 @@ paru = [
   "openssh",
   "pavucontrol",
   "power-profiles-daemon",
+  "rate-mirrors",
   "reflector",
+  "sshfs",
   "update-grub",
   "usbutils",
   "xclip",
