--- a/managers/rustup_component.toml
+++ b/managers/rustup_component.toml
@@ -1,3 +1,3 @@
 add = "rustup component add <items>"
 remove = "rustup component remove <items>"
-list = '''rustup component list --installed | rg -r '' '\-x86_64-unknown-linux-gnu' '''
+list = "rustup component list --installed | sed 's/-x86_64-unknown-linux-gnu//g'"
