Add bluetooth, evremap & usbguard servies for laptop

--- a/machines/laptop.toml
+++ b/machines/laptop.toml
@@ -17,8 +17,11 @@ paru = [
 ]
 
 service = [
+  "bluetooth",
   "cups",
   "cups.path",
   "cups.socket",
+  "evremap",
   "macchanger@wlp2s0",
+  "usbguard",
 ]
