Add libgit2 (for jj, i think)

--- a/configs/development.toml
+++ b/configs/development.toml
@@ -1,4 +1,4 @@
-paru = ["git", "lazygit", "neovim"]
+paru = ["git", "lazygit", "libgit2", "neovim"]
 cargo = ["dprint", "jj-cli", "--locked lazyjj", "tokei", "typos-cli"]
 
 files = [
