--- a/configs/common.toml
+++ b/configs/common.toml
@@ -13,6 +13,7 @@ imports = [
   "profiling",
   "rust",
   "sandboxing",
+  "school",
   "system",
   "temp",
   "terminal",
@@ -32,7 +33,6 @@ paru = [
   "syncthing",
   "torbrowser-launcher",
   "vlc",
-  "xournalpp",
 ]
 
 service = "syncthing@julius"
