--- a/configs/development.toml
+++ b/configs/development.toml
@@ -1,4 +1,5 @@
-paru = ["git", "lazygit", "libgit2", "neovim"]
+paru = ["git", "lazygit", "libgit2", "neovim", "perf"]
+
 cargo = ["dprint", "jj-cli", "--locked lazyjj", "tokei", "typos-cli"]
 
 files = [
