--- a/configs/filesystems/btrfs.toml
+++ b/configs/filesystems/btrfs.toml
@@ -1,4 +1,4 @@
-paru = ["bees", "btrfs-progs", "snapper", "snap-pac", "grub", "grub-btrfs"]
+paru = ["btrfs-progs", "snapper", "snap-pac", "grub", "grub-btrfs"]
 
 files = ["btrfs/etc/snapper/configs"]
 
