--- a/managers/cargo.toml
+++ b/managers/cargo.toml
@@ -1,4 +1,4 @@
 add = "cargo install --force --profile fast_run <item> && cargo install-update-config --install-prereleases $(echo <item> | rev | cut -d ' ' -f 1 | rev)"
 remove = "cargo uninstall <items> || true"
 upgrade = "cargo install-update -ag -- --profile fast_run"
-list = "cargo install --list | rg '^\\S+' -o"                                                                                                             # Double \ because of toml
+list = "cargo_install_reconstructor"                                                                                                                      # Double \ because of toml
