--- a/configs/nvim.toml
+++ b/configs/nvim.toml
@@ -1,4 +1,4 @@
-cargo = "--git https://github.com/Feel-ix-343/markdown-oxide.git markdown-oxide"
+cargo = "--git https://github.com/Feel-ix-343/markdown-oxide markdown-oxide"
 
 
 paru = [
