Remove tui from rustic features (is default anyways)

--- a/machines/pc.toml
+++ b/machines/pc.toml
@@ -16,7 +16,7 @@ paru = [
   "zed-git",
 ]
 
-cargo = "-F tui,mount,mimalloc --git https://github.com/rustic-rs/rustic rustic-rs"
+cargo = "-F mount,mimalloc --git https://github.com/rustic-rs/rustic rustic-rs"
 
 service = "macchanger@enp3s0"
 
