switch from uutils-coreutils to coreutils-hybrid-git

--- a/configs/system.toml
+++ b/configs/system.toml
@@ -4,6 +4,7 @@ paru = [
   "arch-install-scripts",
   "base",
   "base-devel",
+  "coreutils-hybrid-git",
   "cronie",
   "linux-firmware",
   "linux-headers",
