--- a/configs/system.toml
+++ b/configs/system.toml
@@ -27,7 +27,7 @@ paru = [
 cargo = [
   "--git https://github.com/jullanggit/atem atem",
   "--git https://github.com/jullanggit/cargo_install_reconstructor cargo_install_reconstructor",
-  "--git https://github.com/jullanggit/dots dots",
+  "--git https://github.com/jullanggit/dots atem-dots",
   "-F git --git https://github.com/Morganamilo/paru paru",
 ]
 
