--- a/configs/development.toml
+++ b/configs/development.toml
@@ -1,6 +1,14 @@
 paru = ["git", "lazygit", "libgit2", "neovim", "perf"]
 
-cargo = ["add-license", "dprint", "git-cliff", "jj-cli", "tokei", "typos-cli"]
+cargo = [
+  "add-license",
+  "dprint",
+  "git-cliff",
+  "hyperfine",
+  "jj-cli",
+  "tokei",
+  "typos-cli",
+]
 
 files = [
   "/home/julius/Code",
