--- a/configs/system.toml
+++ b/configs/system.toml
@@ -25,9 +25,9 @@ paru = [
 ]
 
 cargo = [
-  "--git https://github.com/jullanggit/atem atem",
+  "atem",
   "--git https://github.com/jullanggit/cargo_install_reconstructor cargo_install_reconstructor",
-  "--git https://github.com/jullanggit/dots atem-dots",
+  "atem-dots",
   "-F git --git https://github.com/Morganamilo/paru paru",
 ]
 
