--- a/configs/filesystems/bcachefs.toml
+++ b/configs/filesystems/bcachefs.toml
@@ -3,5 +3,5 @@ paru = ["snapper_bcachefs", "grub-git"]
 files = [
   "bcachefs/etc/mkinitcpio.conf",
   "bcachefs/etc/snapper/configs",
-  "bcachefs/home/julius/.cache/paru/diff/grub-git.diff.safe",
+  "bcachefs/{home}/.cache/paru/diff/grub-git.diff.safe",
 ]
