--- a/configs/games.toml
+++ b/configs/games.toml
@@ -9,13 +9,13 @@ paru = [
 ]
 
 files = [
-  "/home/julius/.games",
+  "/{home}/.games",
   # Lutris
-  "/home/julius/.config/lutris",
-  "/home/julius/.local/share/lutris/pga.db",
-  "/home/julius/.local/share/yuzu",
+  "/{home}/.config/lutris",
+  "/{home}/.local/share/lutris/pga.db",
+  "/{home}/.local/share/yuzu",
   # Save files
-  "/home/julius/.config/unity3d",
-  "/home/julius/.local/share/Balatro",
-  "/home/julius/.local/share/Celeste",
+  "/{home}/.config/unity3d",
+  "/{home}/.local/share/Balatro",
+  "/{home}/.local/share/Celeste",
 ]
