--- a/configs/games.toml
+++ b/configs/games.toml
@@ -1,4 +1,5 @@
 paru = [
+  "love",
   "lutris",
   "steam-native-runtime",
   # Hollow knight
@@ -11,12 +12,13 @@ paru = [
 files = [
   "/{home}/.games",
   # Lutris
+  "/{home}/.config/love",
   "/{home}/.config/lutris",
   "/{home}/.local/share/lutris/pga.db",
   "/{home}/.local/share/yuzu",
   # Save files
   "/{home}/.config/unity3d",
-  "/{home}/.local/share/Balatro",
   "/{home}/.local/share/Celeste",
+  "/{home}/.local/share/love",
   "/{home}/.config/r2modmanPlus-local",
 ]
