--- a/configs/school.toml
+++ b/configs/school.toml
@@ -1,3 +1,3 @@
 paru = ["anki-bin", "geogebra-6-bin", "rnote-git", "xournalpp"]
-cargo = ["typst-cli"]
+cargo = ["typst-cli", "--git https://github.com/jullanggit/anksidian"]
 files = ["/{home}/.config/xournalpp", "/{home}/.local/share/Anki2"]
