--- a/machines/pc.toml
+++ b/machines/pc.toml
@@ -15,6 +15,10 @@ paru = [
   "spicetify-cli",
   "vial-appimage",
   "wezterm-git",
+  "linux-firmware-intel",
+  "linux-firmware-nvidia",
+  "linux-firmware-other",
+  "linux-firmware-whence",
 ]
 
 cargo = "-F mimalloc,mount,tui --git https://github.com/rustic-rs/rustic rustic-rs"
