add snapper-cleanup and enable it for bcachefs

--- a/configs/filesystems/bcachefs.toml
+++ b/configs/filesystems/bcachefs.toml
@@ -5,3 +5,5 @@ files = [
   "bcachefs/etc/snapper/configs",
   "bcachefs/{home}/.cache/paru/diff/grub-git.diff.safe",
 ]
+
+service = ["snapper-timeline.timer", "snapper-cleanup.timer"]
