--- a/configs/filesystems/btrfs.toml
+++ b/configs/filesystems/btrfs.toml
@@ -2,4 +2,4 @@ paru = ["btrfs-progs", "snapper", "snap-pac", "grub", "grub-btrfs"]
 
 files = ["btrfs/etc/snapper/configs"]
 
-service = "snapper-timeline.timer"
+service = ["snapper-timeline.timer", "snapper-cleanup.timer"]
