unify custom linux, remove from laptop

--- a/configs/custom_linux.toml
+++ b/configs/custom_linux.toml
@@ -1,4 +1,11 @@
-paru = ["devtools", "lld", "llvm", "rust-bindgen"]
+paru = [
+  "devtools",
+  "lld",
+  "llvm",
+  "rust-bindgen",
+  "linux-custom",
+  "linux-custom-headers",
+]
 
 files = [
   "/{home}/linux/pc",
