customize firmware files for laptop

--- a/machines/laptop.toml
+++ b/machines/laptop.toml
@@ -12,6 +12,10 @@ paru = [
   "clight-gui-git",
   "evremap-git",
   "foliate",
+  "linux-firmware-amdgpu",
+  "linux-firmware-realtek",
+  "linux-firmware-other",
+  "linux-firmware-whence",
   # "opencl-amd",
   "snap-pac",
   "sshfs",
