--- a/configs/laptop_temp.toml
+++ b/configs/laptop_temp.toml
@@ -1,10 +1,9 @@
 paru = [
   "gvfs-smb",
   "ttf-nerd-fonts-symbols-mono",
-  "opencl-rusticl-mesa",
-  "lib32-opencl-rusticl-mesa",
+  "mesa-git",
+  "lib32-mesa-git",
   "evtest",
-  "ollama",
   "gamescope",
   "docker",
 ]
