--- a/machines/laptop.toml
+++ b/machines/laptop.toml
@@ -7,9 +7,8 @@ paru = [
   "antimicrox",
   "batsignal",
   "bindfs",
+  "bluez-utils",
   "cups",
-  "clight",
-  "clight-gui-git",
   "evremap-git",
   "foliate",
   "linux-firmware-amdgpu",
