--- a/configs/development.toml
+++ b/configs/development.toml
@@ -1,4 +1,4 @@
-paru = ["git", "lazygit", "libgit2", "namcap", "neovim", "zed"]
+paru = ["git", "jq", "lazygit", "libgit2", "namcap", "neovim", "zed"]
 
 cargo = [
   "add-license",
