--- a/configs/school.toml
+++ b/configs/school.toml
@@ -1,4 +1,4 @@
-paru = ["anki-bin", "geogebra-6-bin", "inkscape", "rnote-git", "xournalpp"]
+paru = ["anki-bin", "geogebra-6-bin", "inkscape", "xournalpp"]
 cargo = ["typst-cli", "--git https://github.com/jullanggit/anksidian"]
 files = [
   "/{home}/.config/xournalpp",
