move dioxus to cargo-binstall manager

--- a/configs/rust.toml
+++ b/configs/rust.toml
@@ -21,12 +21,13 @@ cargo = [
   "cargo-sweep",
   "cargo-update",
   "cargo-wizard",
-  "dioxus-cli",
   "gitoxide",
   "rustfilt",
   # "rusty-man",
   "wild-linker",
 ]
+
+cargo-binstall = "dioxus-cli"
 
 rustup_toolchain = "nightly"
 
